# ShadowCloak

./: README.md  __init__.py  pyproject.toml  requirements.txt  run.py
src/shadowcloak/: constants.py  encryption.py  gui.py  utils.py
